[package]
name = "subnetwork"
version = "0.3.8"
edition = "2021"
license = "MIT"
description = "Return all ip addresses of a subnetwork"
homepage = "https://github.com/rikonaka/subnetwork-rs"
documentation = "https://docs.rs/subnetwork"
repository = "https://github.com/rikonaka/subnetwork-rs"
readme = "README.md"
keywords = ["net", "subnet", "subnetwork"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
