[package]
name = "subnetwork"
version = "0.5.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Return all ip addresses of a subnetwork"
homepage = "https://github.com/rikonaka/subnetwork-rs"
documentation = "https://docs.rs/subnetwork"
repository = "https://github.com/rikonaka/subnetwork-rs"
readme = "README.md"
keywords = ["net", "subnet", "subnetwork"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "^2"
