[package]
name = "subnetwork"
version = "0.6.6"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Return all ip addresses of a subnetwork"
homepage = "https://github.com/rikonaka/subnetwork-rs"
documentation = "https://docs.rs/subnetwork"
repository = "https://github.com/rikonaka/subnetwork-rs"
readme = "README.md"
keywords = ["net", "subnet", "subnetwork"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.18"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
cidr = "0.3.1"
ipnetwork = "0.21.1"
ipnet = "2.11.0"

[[bench]]
name = "benchmark"
harness = false
